feat: avance de los proyectos y arreglo de los servicios

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -38,7 +38,6 @@ import investigacion from "../assets/investigacion.webp";
                     calidad de vida de las personas.
                 </p>
             </div>
-            
         </div>
     </article>
     <article class="about-mision-vision">
@@ -160,7 +159,7 @@ import investigacion from "../assets/investigacion.webp";
         padding: 0 60px;
         gap: 40px;
     }
-    .about-summary-title{
+    .about-summary-title {
         font-size: 50px;
         font-weight: bold;
         color: #003366;
@@ -193,10 +192,10 @@ import investigacion from "../assets/investigacion.webp";
     }
     .about-politicas-container {
         padding: 30px 60px;
-        
     }
 
     .about-politicas-header {
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -217,51 +216,52 @@ import investigacion from "../assets/investigacion.webp";
         color: #003366; /* Color del texto */
         white-space: nowrap;
     }
-
     .img-politicas {
-        display: grid;
-        grid-template-columns: repeat(2, 600px);
-        grid-template-rows: repeat(3, 300px);
-        gap: 20px;
+        display: flex;
         justify-content: center;
-    }
-    .cuidado,
-    .responsabilidad,
-    .seguridad,
-    .investigacion {
-        background-color: rgb(28, 111, 117);
-    }
-    .cuidado {
-        grid-row: span 2 / span 2;
-    }
-    .responsabilidad {
-        grid-row: span 2 / span 2;
-    }
-    .investigacion {
-        grid-column-start: 2;
-        grid-row-start: 3;
+        gap: 20px;
     }
     .politicas {
         position: relative;
-        border-radius: 0 40px 0 40px;
+        border-radius: 10px;
         overflow: hidden;
+        width: 100%;
+        height: 400px;
         display: flex;
-        justify-content: center;
         align-items: center;
-        color: #fff;
-        font-size: 1.5rem;
-        text-align: center;
+        justify-content: center;
+        transition: all 0.3s ease;
+        transform: scale(1);
     }
+    .politicas:hover {
+        transform: translateY(-10px);
+        box-shadow:
+            0px 10px 10px rgba(0, 0, 0, 0.25),
+            0px 5px 10px rgb(96, 178, 255);
+        transition: transform 0.3s ease;
+        }
+
     .politicas-imagen {
         position: absolute;
         width: 100%;
         height: 100%;
         object-fit: cover;
         z-index: 1;
+        filter: brightness(0.8); /* Ajusta el brillo de la imagen */
     }
+    
     .politicas span {
         position: relative;
         z-index: 2;
-        padding: 30px;
+        padding: 20px;
+        color: #fff;
+        font-size: 1.5rem;
+        text-align: center;
+        font-weight: bold;
+        transition: all 0.4s ease;
+    }
+    .politicas:hover span {
+        font-size: 1.6rem; 
+        transition: all 0.4s ease;
     }
 </style>
