--- a/src/components/ObrasEdificacion.astro
+++ b/src/components/ObrasEdificacion.astro
@@ -1,162 +1,55 @@
 ---
 import { Image } from "astro:assets";
-import electricista from "../assets/edificacion1.webp";
-import topografia from "../assets/edificacion2.webp";
-import gasfiteria from "../assets/gasfiteria.webp";
-import delineante from "../assets/delineantecad.webp";
-import arquitectura from "../assets/arquitectura.webp";
-import diseñadorinteriores from "../assets/diseñadorinteriores.webp";
-import imperbealiazacion from "../assets/impermeabilizacion.webp";
+
+import obraEdificacion from "../assets/obraedificacion.webp";
 ---
 
 <section class="servicio-obras-edificacion">
-    <section class="servicio-container">
-        <article class="servicio obrae-title">
-            <div>
-                <h2>OBRAS DE EDIFICACIÓN</h2>
-            </div>
-        </article>
-        <article class="servicio electricista">
+    <article class="servicio-container">
+        <div class="servicio-img">
             <Image
-                src={electricista}
-                alt="Electricista"
+                src={obraEdificacion}
+                alt="Obras de edificación"
                 class="servicio-image"
-                width={500}
+                width={1000}
                 height={500}
             />
-            <span>Electricista</span>
-        </article>
-        <article class="servicio topografia">
-            <Image
-                src={topografia}
-                alt="Topografia"
-                class="servicio-image"
-                width={500}
-                height={500}
-            />
-            <span>Topografía</span>
-        </article>
-        <article class="servicio gasfiteria">
-            <Image
-                src={gasfiteria}
-                alt="Gasfiteria"
-                class="servicio-image"
-                width={500}
-                height={500}
-            />
-            <span>Gastifería</span>
-        </article>
-        <article class="servicio delineante">
-            <Image
-                src={delineante}
-                alt="Delineante"
-                class="servicio-image"
-                width={500}
-                height={500}
-            />
-            <span>Delineante CAD</span>
-        </article>
-        <article class="servicio arquitectura">
-            <Image
-                src={arquitectura}
-                alt="Arquitectura"
-                class="servicio-image"
-                width={500}
-                height={500}
-            />
-            <span>Arquitectura</span>
-        </article>
-        <article class="servicio diseño">
-            <Image
-                src={diseñadorinteriores}
-                alt="diseño"
-                class="servicio-image"
-                width={500}
-                height={500}
-            />
-            <span>Diseñador y decoración de Interiores</span>
-        </article>
-        <article class="servicio tecnico">
-            <Image
-                src={imperbealiazacion}
-                alt="tecnico"
-                class="servicio-image"
-                width={500}
-                height={500}
-            />
-            <span>Técnico de Impermeabilización</span>
-        </article>
-    </section>
+        </div>
+        <div>
+            <h2>Obras de Edificación</h2>
+            <ul class="servicio-detalles">
+                <li>Arquitectura</li>
+                <li>Proveedor de Materiales</li>
+                <li>Carpintero</li>
+                <li>Gasfitería</li>
+                <li>Electricistas</li>
+                <li>Técnico de Impermeabilización</li>
+                <li>Delineante (CAD)</li>
+                <li>Ingeniero Civil</li>
+                <li>Diseñador y decoración de Interiores</li>
+                <li>Topografía</li>
+            </ul>
+        </div>
+    </article>
 </section>
 <style>
     .servicio-obras-edificacion {
         width: 100%;
-        background-color: #0b5181;
-        padding-top: 3rem;
-        padding-bottom: 3rem;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        height: 100%;
+        box-sizing: border-box;
     }
     .servicio-container {
         display: grid;
-        grid-template-columns: repeat(3, 450px);
-        grid-template-rows: repeat(7, 85px);
-        gap: 20px;
-        justify-content: center;
-    }
-    .electricista {
-        grid-row: span 3 / span 3;
-    }
-    .topografia {
-        grid-row: span 2 / span 2;
-    }
-    .gasfiteria {
-        grid-row: span 3 / span 3;
-    }
-    .delineante {
-        grid-row: span 2 / span 2;
-        grid-column-start: 2;
-        grid-row-start: 4;
-    }
-    .arquitectura {
-        grid-row: span 3 / span 3;
-        grid-column-start: 3;
-        grid-row-start: 3;
-    }
-    .diseño {
-        grid-row: span 3 / span 3;
-        grid-column-start: 1;
-        grid-row-start: 5;
-    }
-    .tecnico {
-        grid-column: span 2 / span 2;
-        grid-row: span 2 / span 2;
-        grid-column-start: 2;
-        grid-row-start: 6;
+        grid-template-columns: 1fr 1fr;
+        padding: 30px 60px;
+        gap: 30px;
     }
     .servicio-image {
-        position: absolute;
         width: 100%;
-        height: 100%;
         object-fit: cover;
-        z-index: 1;
-        filter: brightness(0.8);
+        border-radius: 20px;
     }
-    span {
-        position: relative;
-        z-index: 2;
-        color: white;
-    }
-    .servicio {
-        position: relative;
-        border-radius: 15px;
-        overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.5rem;
-        text-align: center;
+    .servicio-detalles{
+        font-size: 1.8rem;
     }
 </style>
