--- a/src/components/WhyUs.astro
+++ b/src/components/WhyUs.astro
@@ -73,14 +73,13 @@ import respeto from "../assets/respeto.webp";
 </section>
 <style>
     section {
-        padding: 60px;
+        padding: 30px 60px;
         background-color: #f0f0f0;
     }
     .why-us {
         display: flex;
-        align-items: center;
         max-width: 90%;
-        padding-bottom: 10px;
+        gap: 20px;
     }
     .why-us h1 {
         font-family: "Poppins", sans-serif;
@@ -95,7 +94,7 @@ import respeto from "../assets/respeto.webp";
         margin: 20px 0 30px;
         line-height: 1.4;
     }
-    
+
     .card-container {
         display: flex;
         gap: 20px;
@@ -104,18 +103,27 @@ import respeto from "../assets/respeto.webp";
     }
     .card {
         position: relative;
-        width: 300px;
     }
     .image-wrapper {
         position: relative;
         display: block;
         overflow: hidden;
+        width: 300px;
+        height: 200px;
+        border-radius: 5%;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+
+        transition: transform 0.3s ease;
+    }
+    .image-wrapper:hover {
+        transform: scale(1.05);
+        transition: transform 0.3s ease;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
     }
     .valores {
         width: 100%;
-        height: 400px;
+        height: 100%;
         object-fit: cover;
-        border-radius: 5%;
     }
     .text-overlay {
         position: absolute;
@@ -125,7 +133,5 @@ import respeto from "../assets/respeto.webp";
         color: white;
         font-size: 24px;
         font-weight: bold;
-        
     }
-
 </style>
