--- a/src/pages/servicios.astro
+++ b/src/pages/servicios.astro
@@ -2,8 +2,10 @@
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import ServiceUs from "../components/ServiceUs.astro";
+import Footer from "../components/Footer.astro";
 ---
 <Layout>
     <Header/>
     <ServiceUs/>
+    <Footer/>
 </Layout>
