--- a/src/components/EnsayoLaboratorio.astro
+++ b/src/components/EnsayoLaboratorio.astro
@@ -5,46 +5,63 @@ import ensayoslaboratorio from "../assets/ensayoslaboratorio.webp";
 
 <section class="servicio-ensayo-laboratorio">
     <article class="servicio-container">
-        <div>
-            <h2>Ensayos de Laboratorio</h2>
-            <ul class="servicio-detalles">
+        <div class="servicio-detalles">
+            <h2 class="servicio-title">ENSAYOS DE LABORATORIO</h2>
+            <ul class="list-detalles">
                 <li>Ensayos Especiales (ASTM)</li>
-                <li>Ensayos de Agregados (ASTM/MTC/NTP)</li>
-                <li>Ensayos de Suelos (ASTM/MTC)</li>
+                <li>Ensayos de Agregados (ASTM / MTC / NTP)</li>
+                <li>Ensayos de Suelos (ASTM / MTC)</li>
                 <li>Ensayos de Campo en Suelos</li>
-                <li>Ensayos de Concreto Fresco y Endurecido (ASTM/MTC)</li>
-                <li>Ensayos Químicos (ASTM/MTC/NTP)</li>
+                <li>Ensayos de Concreto Fresco y Endurecido (ASTM / MTC)</li>
+                <li>Ensayos Químicos (ASTM /MTC /NTP)</li>
             </ul>
         </div>
         <div class="servicio-img">
             <Image
                 src={ensayoslaboratorio}
-                alt="Electricista"
+                alt="Ensayos de laboratorio"
                 class="servicio-image"
                 width={1000}
-                height={500}
+                height={400}
             />
         </div>
     </article>
 </section>
 <style>
     .servicio-ensayo-laboratorio {
+        height: 60vh;
         width: 100%;
-        height: 100%;
-        box-sizing: border-box;
+        background-color: white;
     }
     .servicio-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        padding: 30px 60px;
         gap: 30px;
+        height: 100%;
+        align-items: center;
+    }
+    .servicio-img {
+        height: 380px; /* Altura fija para el contenedor de la imagen */
+        overflow: hidden; /* Oculta cualquier parte de la imagen que sobresalga */
+        border-radius: 100px 0px 0px 100px;
+        box-shadow: -15px -10px 20px rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.3);
     }
     .servicio-image {
         width: 100%;
+        height: 100%;
         object-fit: cover;
-        border-radius: 20px;
     }
-    .servicio-detalles{
-        font-size: 1.8rem;
+    .list-detalles {
+        font-size: 1.6rem;
+        font-family: "Noto Sans", sans-serif;
+    }
+    .servicio-detalles {
+        padding-left: 60px;
+    }
+    .servicio-title {
+        font-size: 2.4rem;
+        font-weight: bold;
+        margin: 0;
     }
 </style>
