--- a/src/components/ObrasAlcantarillado.astro
+++ b/src/components/ObrasAlcantarillado.astro
@@ -8,44 +8,63 @@ import obraalcantarillado from "../assets/obraalcantarillado.webp";
         <div class="servicio-img">
             <Image
                 src={obraalcantarillado}
-                alt="Electricista"
+                alt="Obras de agua potable y alcantarillado"
                 class="servicio-image"
                 width={1000}
-                height={500}
+                height={400}
             />
         </div>
-        <div>
-            <h2>Obras de agua potable y alcantarillado</h2>
-            <ul class="servicio-detalles">
-                <li>Levantamiento topográfico </li>
-                <li>Seguridad Ocupacional  </li>
-                <li>Área Ambiental  </li>
+        <div class="servicio-detalles">
+            <h2 class="servicio-title">OBRAS DE AGUA POTABLE Y ALCANTARILLADO</h2>
+            <ul class="list-detalles">
+                <li>Levantamiento topográfico</li>
+                <li>Seguridad Ocupacional</li>
+                <li>Área Ambiental</li>
                 <li>Mecánica de Suelos</li>
                 <li>Enfermería</li>
                 <li>Ingeniero Civil</li>
-                <li>Planta de Tratamiento de Aguas Residuales</li>
-                <li>Planta de Tratamiento de Agua Potable</li>
-            </ul>
+                <li>Planta de Tratamiento de Aguas Potable y Residuales</li>
+                
+            </ul> 
         </div>
     </article>
 </section>
 <style>
-    .servicio-obras-alcantarillado {
+    .servicio-obras-agua-alcantarillado {
         width: 100%;
-        height: 100%;
+        height: 60vh;
+        background-color: white;  
     }
     .servicio-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        padding: 30px 60px;
         gap: 30px;
+        align-items: center;
+        height: 100%;
     }
+    .servicio-img {
+        height: 380px; /* Altura fija para el contenedor de la imagen */
+        overflow: hidden; /* Oculta cualquier parte de la imagen que sobresalga */
+        border-radius: 0px 100px 100px 0px;
+        box-shadow: 10px -10px 20px rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+
     .servicio-image {
         width: 100%;
+        height: 100%;
         object-fit: cover;
-        border-radius: 20px;
+    }
+    .list-detalles{
+        font-size: 1.4rem;
+        font-family: "Noto Sans", sans-serif;
     }
     .servicio-detalles{
-        font-size: 1.8rem;
+        padding-right: 60px;
+    }
+    .servicio-title{
+        font-size: 2.4rem;
+        font-weight: bold;
+        margin: 0;
     }
 </style>
