--- a/src/components/ObrasCarretera.astro
+++ b/src/components/ObrasCarretera.astro
@@ -5,11 +5,11 @@ import obracarretera from "../assets/obracarretera.webp";
 
 <section class="servicio-obras-carretera">
     <article class="servicio-container">
-        <div>
-            <h2>Obras de carretera</h2>
-            <ul class="servicio-detalles">
+        <div class="servicio-detalles">
+            <h2 class="servicio-title">OBRAS EN CARRETERA</h2>
+            <ul class="list-detalles">
                 <li>Levantamiento Topográfico</li>
-                <li>Seguridad Ocupacional </li>
+                <li>Seguridad Ocupacional</li>
                 <li>Área Ambiental</li>
                 <li>Mecánica de Suelos</li>
                 <li>Enfermería</li>
@@ -18,10 +18,10 @@ import obracarretera from "../assets/obracarretera.webp";
         <div class="servicio-img">
             <Image
                 src={obracarretera}
-                alt="Electricista"
+                alt="Obra de carretera"
                 class="servicio-image"
                 width={1000}
-                height={500}
+                height={380}
             />
         </div>
     </article>
@@ -29,21 +29,38 @@ import obracarretera from "../assets/obracarretera.webp";
 <style>
     .servicio-obras-carretera {
         width: 100%;
-        height: 100%;
-        box-sizing: border-box;
+        height: 60vh;
+        background-color: white;
     }
     .servicio-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        padding: 30px 60px;
+        align-items: center;
         gap: 30px;
+        height: 100%;
+    }
+    .servicio-detalles {
+        padding-left: 60px;
+    }
+    .servicio-img {
+        height: 380px; /* Altura fija para el contenedor de la imagen */
+        overflow: hidden; /* Oculta cualquier parte de la imagen que sobresalga */
+        border-radius: 100px 0px 0px 100px;
+        box-shadow: -15px -10px 20px rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.3);
     }
     .servicio-image {
         width: 100%;
+        height: 100%;
         object-fit: cover;
-        border-radius: 20px;
     }
-    .servicio-detalles{
-        font-size: 1.8rem;
+    .list-detalles {
+        font-size: 1.5rem;
+        font-family: "Noto Sans", sans-serif;
+    }
+    .servicio-title {
+        font-size: 2.4rem;
+        font-weight: bold;
+        margin: 0;
     }
 </style>
