--- a/src/components/ObrasEdificacion.astro
+++ b/src/components/ObrasEdificacion.astro
@@ -12,12 +12,12 @@ import obraEdificacion from "../assets/obraedificacion.webp";
                 alt="Obras de edificación"
                 class="servicio-image"
                 width={1000}
-                height={500}
+                height={400}
             />
         </div>
-        <div>
-            <h2>Obras de Edificación</h2>
-            <ul class="servicio-detalles">
+        <div class="servicio-detalles">
+            <h2 class="servicio-title">OBRAS DE EDIFICACIÓN</h2>
+            <ul class="list-detalles">
                 <li>Arquitectura</li>
                 <li>Proveedor de Materiales</li>
                 <li>Carpintero</li>
@@ -35,21 +35,39 @@ import obraEdificacion from "../assets/obraedificacion.webp";
 <style>
     .servicio-obras-edificacion {
         width: 100%;
-        height: 100%;
-        box-sizing: border-box;
+        height: 60vh;
+        background-color: white;
     }
     .servicio-container {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        padding: 30px 60px;
+        grid-template-columns: 1fr 1fr; /* Dos columnas iguales */
+        height: 100%;
         gap: 30px;
+        align-items: center;
     }
+    .servicio-img {
+        height: 380px; /* Altura fija para el contenedor de la imagen */
+        overflow: hidden; /* Oculta cualquier parte de la imagen que sobresalga */
+        border-radius: 0px 100px 100px 0px;
+        box-shadow: 10px -10px 20px rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+
     .servicio-image {
         width: 100%;
+        height: 100%;
         object-fit: cover;
-        border-radius: 20px;
     }
-    .servicio-detalles{
-        font-size: 1.8rem;
+    .list-detalles {
+        font-size: 1.2rem;
+        font-family: "Noto Sans", sans-serif;
+    }
+    .servicio-detalles {
+        padding-right: 60px;
+    }
+    .servicio-title {
+        font-size: 2.4rem;
+        font-weight: bold;
+        margin: 0;
     }
 </style>
