--- a/src/components/SolucionesIEquiposP.astro
+++ b/src/components/SolucionesIEquiposP.astro
@@ -11,12 +11,14 @@ import equiposPesados from "../assets/equipospesados.webp";
                 alt="Electricista"
                 class="servicio-image"
                 width={1000}
-                height={500}
+                height={400}
             />
         </div>
-        <div>
-            <h2 class="servicio-title">Soluciones integrales de equipos pesados</h2>
-            <ul class="servicio-detalles">
+        <div class="service-detalles">
+            <h2 class="servicio-title">
+                SOLUCIONES INTEGRALES DE EQUIPOS PESADOS
+            </h2>
+            <ul class="list-detalles">
                 <li>Mantenimiento Preventivo y Correctivo</li>
                 <li>Fabricación y Mecanizado de Piezas</li>
                 <li>Movimientos de Tierra</li>
@@ -28,24 +30,40 @@ import equiposPesados from "../assets/equipospesados.webp";
 </section>
 <style>
     .servicio-soluciones-integrales {
+        height: 60vh;
         width: 100%;
-        height: 100%;
-        box-sizing: border-box;
+        background-color: white;
     }
     .servicio-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        padding: 30px 60px;
         gap: 30px;
+        height: 100%;
+        align-items: center;
     }
+    .servicio-img {
+        height: 380px; /* Altura fija para el contenedor de la imagen */
+        overflow: hidden; /* Oculta cualquier parte de la imagen que sobresalga */
+        border-radius: 0px 100px 100px 0px;
+        box-shadow: 10px -10px 20px rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+
     .servicio-image {
         width: 100%;
+        height: 100%;
         object-fit: cover;
-        border-radius: 20px;
     }
-    .servicio-detalles{
-        font-size: 1.8rem;
+    .list-detalles {
+        font-size: 1.6rem;
+        font-family: "Noto Sans", sans-serif;
     }
-    .servicio-title{
+    .servicio-title {
+        font-size: 2.4rem;
+        font-weight: bold;
+        margin: 0;
+    }
+    .service-detalles {
+        padding-right: 60px;
     }
 </style>
